k8s/base/00-ns-thudt32.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thudt32
  labels:
    istio-injection: "enabled"
