k8s/base/30-thudt32-frontier-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thudt32-frontier
  namespace: thudt32
  labels:
    app: thudt32-frontier
spec:
  replicas: 1
  selector:
    matchLabels: { app: thudt32-frontier }
  template:
    metadata:
      labels: { app: thudt32-frontier }
    spec:
      containers:
      - name: thudt32-frontier
        image: circuit-breaker:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
        resources:
          requests: { cpu: "250m", memory: "256Mi" }
          limits:   { cpu: "500m", memory: "512Mi" }
