k8s/base/55-thudt32-backline-destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: thudt32-backline-dr
  namespace: thudt32
spec:
  host: thudt32-backline.thudt32.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 2s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
