k8s/base/56-thudt32-backline-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: thudt32-backline-vs
  namespace: thudt32
spec:
  hosts:
    - thudt32-backline.thudt32.svc.cluster.local
  http:
    - route:
        - destination:
            host: thudt32-backline.thudt32.svc.cluster.local
            port:
              number: 80
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: "5xx,connect-failure,reset"
